--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "lint": "eslint ./src",
     "test": "jest",
     "start": "npm run sync-assets & webpack-dev-server --mode development --open --hot",
-    "build": "rm -rf ./dist/ && npm run sync-assets && webpack build --progress --mode production -o ./dist",
+    "build": "rm -rf ./dist/ && npm run sync-assets && webpack build --progress --mode production -o ./dist;./scripts/postinstall.sh",
     "sync-assets": "copy-aragon-ui-assets -n aragon-ui ./public"
   },
   "browserslist": [
